src/main/default/objects/Curtain__c/Curtain__c.object-meta.xml
<CustomObject>
    <label>Штора</label>
    <nameField>
        <label>Штора Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Штори</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>