src/main/default/objects/Curtain__c/fields/AdvancePaymentReceived__c.field-meta.xml
<CustomField>
    <fullName>AdvancePaymentReceived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Аванс отримано</label>
    <type>Checkbox</type>
</CustomField>