src/main/default/objects/Curtain__c/fields/Carniz__c.field-meta.xml
<CustomField>
    <fullName>Carniz__c</fullName>
    <label>Карніз</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>gardinia</fullName>
                <label>Gardinia</label>
            </value>
            <value>
                <fullName>alutat</fullName>
                <label>Alutat</label>
            </value>
            <value>
                <fullName>ks</fullName>
                <label>KS</label>
            </value>
            <value>
                <fullName>lux</fullName>
                <label>Lux S-M</label>
            </value>
            <value>
                <fullName>ds</fullName>
                <label>DS</label>
            </value>
            <value>
                <fullName>circle</fullName>
                <label>Круглий</label>
            </value>
            <value>
                <fullName>metal</fullName>
                <label>Металічний П-обр крючок</label>
            </value>
            <value>
                <fullName>other</fullName>
                <label>Інший</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>