src/main/default/objects/Curtain__c/fields/CarnizWigth2__c.field-meta.xml
<CustomField>
    <fullName>CarnizWigth2__c</fullName>
    <label>Ширина Карнізу 2 (см)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>