src/main/default/objects/Curtain__c/fields/CarnizWigth__c.field-meta.xml
<CustomField>
    <fullName>CarnizWigth__c</fullName>
    <label>Ширина Карнізу (см)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>