src/main/default/objects/Curtain__c/fields/Check2__c.field-meta.xml
<CustomField>
    <fullName>Check2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Вибрати</label>
    <type>Checkbox</type>
</CustomField>