src/main/default/objects/Curtain__c/fields/CoefficientZbirki__c.field-meta.xml
<CustomField>
    <fullName>CoefficientZbirki__c</fullName>
    <label>Коефіціент Збірки</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>zbirkazCoefficient</valueSetName>
    </valueSet>
</CustomField>