src/main/default/objects/Curtain__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Контакт</label>
    <referenceTo>Contact__c</referenceTo>
    <relationshipLabel>Curtains</relationshipLabel>
    <relationshipName>Curtains</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>