src/main/default/objects/Curtain__c/fields/ContactDiscount2__c.field-meta.xml
<CustomField>
    <fullName>ContactDiscount2__c</fullName>
    <label>Знижка з контакта</label>
    <length>255</length>
    <type>Text</type>
</CustomField>