src/main/default/objects/Curtain__c/fields/ContactDiscount__c.field-meta.xml
<CustomField>
    <fullName>ContactDiscount__c</fullName>
    <label>Знижка з контакта</label>
    <length>255</length>
    <type>Text</type>
</CustomField>