src/main/default/objects/Curtain__c/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <formula>Contact__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ім&apos;я замовника</label>
    <type>Text</type>
</CustomField>