src/main/default/objects/Curtain__c/fields/CurtainDiscount2__c.field-meta.xml
<CustomField>
    <fullName>CurtainDiscount2__c</fullName>
    <label>Спеціальні умови</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>2 %</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 %</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 %</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 %</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6 %</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>7 %</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>8 %</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10 %</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>13 %</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>14 %</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>15 %</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>