src/main/default/objects/Curtain__c/fields/CurtainPaid__c.field-meta.xml
<CustomField>
    <fullName>CurtainPaid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Тканину оплачено</label>
    <type>Checkbox</type>
</CustomField>