src/main/default/objects/Curtain__c/fields/CurtainPriceSum__c.field-meta.xml
<CustomField>
    <fullName>CurtainPriceSum__c</fullName>
    <label>Ціна за тканину</label>
    <length>255</length>
    <type>Text</type>
</CustomField>