src/main/default/objects/Curtain__c/fields/CustomWigth2__c.field-meta.xml
<CustomField>
    <fullName>CustomWigth2__c</fullName>
    <label>Ширина тканини (см)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>