src/main/default/objects/Curtain__c/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <label>Доставка</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>65</fullName>
                <label>65 грн.</label>
            </value>
            <value>
                <fullName>80</fullName>
                <label>80 грн</label>
            </value>
            <value>
                <fullName>100</fullName>
                <label>100 грн.</label>
            </value>
            <value>
                <fullName>120</fullName>
                <label>120 грн.</label>
            </value>
            <value>
                <fullName>150</fullName>
                <label>150 грн.</label>
            </value>
            <value>
                <fullName>180</fullName>
                <label>180 грн.</label>
            </value>
            <value>
                <fullName>200</fullName>
                <label>200 грн.</label>
            </value>
            <value>
                <fullName>220</fullName>
                <label>220 грн.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>