src/main/default/objects/Curtain__c/fields/DeliveryNumber__c.field-meta.xml
<CustomField>
    <fullName>DeliveryNumber__c</fullName>
    <label>Кількість доставок</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>