src/main/default/objects/Curtain__c/fields/Description2__c.field-meta.xml
<CustomField>
    <fullName>Description2__c</fullName>
    <label>Коментар</label>
    <length>255</length>
    <type>Text</type>
</CustomField>