src/main/default/objects/Curtain__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Коментар</label>
    <length>255</length>
    <type>Text</type>
</CustomField>