src/main/default/objects/Curtain__c/fields/Diameter2__c.field-meta.xml
<CustomField>
    <fullName>Diameter2__c</fullName>
    <label>Діаметр Карнізу</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>2 см</label>
            </value>
            <value>
                <fullName>2_5</fullName>
                <label>2,5 см</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 см</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>