src/main/default/objects/Curtain__c/fields/Diameter__c.field-meta.xml
<CustomField>
    <fullName>Diameter__c</fullName>
    <label>Діаметр Карнізу</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>2 см</label>
            </value>
            <value>
                <fullName>2.5</fullName>
                <label>2,5 см</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 см</label>
            </value>
            <value>
                <fullName>1.5</fullName>
                <label>1,5 см</label>
            </value>
            <value>
                <fullName>3.5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 см</label>
            </value>
            <value>
                <fullName>4.5</fullName>
                <label>4,5 см</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 см</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>