src/main/default/objects/Curtain__c/fields/FinalPrice__c.field-meta.xml
<CustomField>
    <fullName>FinalPrice__c</fullName>
    <label>Загальна сумма1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>