src/main/default/objects/Curtain__c/fields/GeneralPrice2__c.field-meta.xml
<CustomField>
    <fullName>GeneralPrice2__c</fullName>
    <label>Загальна сумма</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>