src/main/default/objects/Curtain__c/fields/Height2__c.field-meta.xml
<CustomField>
    <fullName>Height2__c</fullName>
    <label>Висота (см)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>