src/main/default/objects/Curtain__c/fields/HeightPoint__c.field-meta.xml
<CustomField>
    <fullName>HeightPoint__c</fullName>
    <label>Точка Висоти</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>від краю до краю</fullName>
            </value>
            <value>
                <fullName>до карнізу</fullName>
            </value>
            <value>
                <fullName>до гачка</fullName>
            </value>
            <value>
                <fullName>до верхньої петлі</fullName>
            </value>
            <value>
                <fullName>до другої петлі</fullName>
            </value>
            <value>
                <fullName>до нижньої петлі</fullName>
            </value>
            <value>
                <fullName>до тасьми</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>