src/main/default/objects/Curtain__c/fields/ManualPrice2__c.field-meta.xml
<CustomField>
    <fullName>ManualPrice2__c</fullName>
    <label>Відома ціна</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>