src/main/default/objects/Curtain__c/fields/Meterage2__c.field-meta.xml
<CustomField>
    <fullName>Meterage2__c</fullName>
    <label>Метраж тканини</label>
    <length>255</length>
    <type>Text</type>
</CustomField>