src/main/default/objects/Curtain__c/fields/Meterage__c.field-meta.xml
<CustomField>
    <fullName>Meterage__c</fullName>
    <label>Метраж тканини</label>
    <length>255</length>
    <type>Text</type>
</CustomField>