src/main/default/objects/Curtain__c/fields/MeterageNaPoshiv__c.field-meta.xml
<CustomField>
    <fullName>MeterageNaPoshiv__c</fullName>
    <label>Метраж на пошив</label>
    <length>255</length>
    <type>Text</type>
</CustomField>