src/main/default/objects/Curtain__c/fields/Name2__c.field-meta.xml
<CustomField>
    <fullName>Name2__c</fullName>
    <label>Назва</label>
    <length>255</length>
    <type>Text</type>
</CustomField>