src/main/default/objects/Curtain__c/fields/Navis2__c.field-meta.xml
<CustomField>
    <fullName>Navis2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Навіс</label>
    <type>Checkbox</type>
</CustomField>