src/main/default/objects/Curtain__c/fields/NavisPrice__c.field-meta.xml
<CustomField>
    <fullName>NavisPrice__c</fullName>
    <label>Ціна навісу</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>120</fullName>
                <label>120 грн м.п.</label>
            </value>
            <value>
                <fullName>140</fullName>
                <label>140 грн. м.п.</label>
            </value>
            <value>
                <fullName>160</fullName>
                <label>160 грн. м.п.</label>
            </value>
            <value>
                <fullName>180</fullName>
                <label>180 грн. м.п.</label>
            </value>
            <value>
                <fullName>200</fullName>
                <label>200 грн. м.п.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>