src/main/default/objects/Curtain__c/fields/NavisPriceSum2__c.field-meta.xml
<CustomField>
    <fullName>NavisPriceSum2__c</fullName>
    <label>Ціна за навіс</label>
    <length>255</length>
    <type>Text</type>
</CustomField>