src/main/default/objects/Curtain__c/fields/NavisPriceSum__c.field-meta.xml
<CustomField>
    <fullName>NavisPriceSum__c</fullName>
    <label>Ціна за навіс</label>
    <length>255</length>
    <type>Text</type>
</CustomField>