src/main/default/objects/Curtain__c/fields/Nisha__c.field-meta.xml
<CustomField>
    <fullName>Nisha__c</fullName>
    <label>Ніша</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>yes</fullName>
                <label>Так</label>
            </value>
            <value>
                <fullName>no</fullName>
                <label>Ні</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>