src/main/default/objects/Curtain__c/fields/ObrobkaNiz2__c.field-meta.xml
<CustomField>
    <fullName>ObrobkaNiz2__c</fullName>
    <label>Обробка низу</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Обтяжувач</fullName>
            </value>
            <value>
                <fullName>3 x 3 W</fullName>
            </value>
            <value>
                <fullName>5 х 5 W</fullName>
            </value>
            <value>
                <fullName>10 x 10 W</fullName>
            </value>
            <value>
                <fullName>12 x 12 W</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>