src/main/default/objects/Curtain__c/fields/Ordered__c.field-meta.xml
<CustomField>
    <fullName>Ordered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Замовлено</label>
    <type>Checkbox</type>
</CustomField>