src/main/default/objects/Curtain__c/fields/PicturesAttached__c.field-meta.xml
<CustomField>
    <fullName>PicturesAttached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Файл Прикріплено</label>
    <type>Checkbox</type>
</CustomField>