src/main/default/objects/Curtain__c/fields/PoshivPrice2__c.field-meta.xml
<CustomField>
    <fullName>PoshivPrice2__c</fullName>
    <label>Ціна пошиву</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>150</fullName>
                <label>150 грн.</label>
            </value>
            <value>
                <fullName>180</fullName>
                <label>180 грн.</label>
            </value>
            <value>
                <fullName>200</fullName>
                <label>200 грн.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>