src/main/default/objects/Curtain__c/fields/PoshivPrice__c.field-meta.xml
<CustomField>
    <fullName>PoshivPrice__c</fullName>
    <label>Ціна пошиву</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>150</fullName>
                <label>150 грн.</label>
            </value>
            <value>
                <fullName>180</fullName>
                <label>180 грн.</label>
            </value>
            <value>
                <fullName>200</fullName>
                <label>200 грн.</label>
            </value>
            <value>
                <fullName>160</fullName>
                <label>160 грн.</label>
            </value>
            <value>
                <fullName>220</fullName>
                <label>220 грн.</label>
            </value>
            <value>
                <fullName>240</fullName>
                <label>240 грн.</label>
            </value>
            <value>
                <fullName>260</fullName>
                <label>260 грн.</label>
            </value>
            <value>
                <fullName>280</fullName>
                <label>280 грн.</label>
            </value>
            <value>
                <fullName>300</fullName>
                <label>300 грн.</label>
            </value>
            <value>
                <fullName>320</fullName>
                <label>320 грн.</label>
            </value>
            <value>
                <fullName>360</fullName>
                <label>360 грн.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>