src/main/default/objects/Curtain__c/fields/PoshivPriceSum2__c.field-meta.xml
<CustomField>
    <fullName>PoshivPriceSum2__c</fullName>
    <label>Ціна за пошив</label>
    <length>255</length>
    <type>Text</type>
</CustomField>