src/main/default/objects/Curtain__c/fields/PostpaidReceived2__c.field-meta.xml
<CustomField>
    <fullName>PostpaidReceived2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Післяоплата отримана</label>
    <type>Checkbox</type>
</CustomField>