src/main/default/objects/Curtain__c/fields/Price2__c.field-meta.xml
<CustomField>
    <fullName>Price2__c</fullName>
    <label>Ціна тканини</label>
    <length>255</length>
    <type>Text</type>
</CustomField>