src/main/default/objects/Curtain__c/fields/PriceType__c.field-meta.xml
<CustomField>
    <fullName>PriceType__c</fullName>
    <label>Валюта</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>грн</fullName>
                <label>грн.</label>
            </value>
            <value>
                <fullName>уо</fullName>
                <label>опт, у.о.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>