src/main/default/objects/Curtain__c/fields/Quantity2__c.field-meta.xml
<CustomField>
    <fullName>Quantity2__c</fullName>
    <label>Кількість</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 штука</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 штуки</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 штуки</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 штуки</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>