src/main/default/objects/Curtain__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <label>Кімната</label>
    <length>255</length>
    <type>Text</type>
</CustomField>